--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,6 +1,6 @@
 <div class="flex-grid flex-grid--wrap flex-grid--col w-100 m-40 t-center">
     <small>
-        Built by <a href="https://bradleytaunt.com">Bradley Taunt</a> with &hearts;.
-        <br/>View the <a href="{{ pkg.repository.url }}">Github repo</a>.
+        Built with <a href="https://www.11ty.io/">Eleventy</a> with &hearts;.
+        <br/>View the source on <a href="{{ pkg.repository.url }}">GitHub</a>.
     </small>
 </div>
