--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -7,9 +7,9 @@
 </nav>
 
 <nav>
-    <ul class="t-right flex-break">
+    {# <ul class="t-right flex-break">
         <li><a href="https://dribbble.com/hustlepizza">Dribbble</a></li>
         <li><a href="https://github.com/bradleytaunt">Github</a></li>
         <li><a href="https://codepen.io/bradleytaunt/">Codepen</a></li>
-    </ul>
+    </ul> #}
 </nav>
