--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -1,24 +1,25 @@
 :root {
-	--brand-color: #fff;
-	--link-color: #ef5a5a;
+  --brand-color: #fff;
+  --link-color: #ef5a5a;
 }
 
 *,
 *:before,
 *:after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
 body {
-	padding: 0;
-	margin: 0;
-	font-family: "Avenir", -apple-system, "SF UI Text", "Avenir Next", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  padding: 0;
+  margin: 0;
+  font-family: "Avenir", -apple-system, "SF UI Text", "Avenir Next",
+    "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 body {
-	background-color: var(--brand-color);
-	font-size: 18px;
+  background-color: var(--brand-color);
+  font-size: 18px;
 }
 body h1,
 h2,
@@ -26,300 +27,300 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: "Open Sans", "Helvetica", sans-serif;
+  font-family: "Open Sans", "Helvetica", sans-serif;
 }
 
 h1 {
-	color: var(--link-color);
-	font-size: 60px;
-	margin: 80px 0;
-	padding: 0 20px;
-	text-align: center;
+  color: var(--link-color);
+  font-size: 60px;
+  margin: 80px 0;
+  padding: 0 20px;
+  text-align: center;
 }
 
 p {
-	line-height: 29px;
-	margin: 0 0 10px;
+  line-height: 29px;
+  margin: 0 0 10px;
 }
 
 a,
 a:visited {
-	color: var(--link-color);
+  color: var(--link-color);
 }
 
 img {
-	width: 100%;
+  width: 100%;
 }
 
 hr {
-	background: rgba(0, 0, 0, 0.1);
-	border: 0;
-	height: 1px;
-	margin: 20px 0;
-	width: 100%;
+  background: rgba(0, 0, 0, 0.1);
+  border: 0;
+  height: 1px;
+  margin: 20px 0;
+  width: 100%;
 }
 
 .marginnote {
-	font-size: 80%;
-	font-style: italic;
+  font-size: 80%;
+  font-style: italic;
 }
 
 small {
-	display: block;
-	font-size: 90%;
-	width: 100%;
+  display: block;
+  font-size: 90%;
+  width: 100%;
 }
 
 ul,
 ol {
-	line-height: 29px;
-	margin: 0 0 20px;
+  line-height: 29px;
+  margin: 0 0 20px;
 }
 
 figure {
-	margin: 0 0 10px 0;
+  margin: 0 0 10px 0;
 }
 
 pre {
-	background: rgba(0, 0, 0, 0.05);
-	overflow: auto;
-	padding: 10px;
+  background: rgba(0, 0, 0, 0.05);
+  overflow: auto;
+  padding: 10px;
 }
 
 table {
-	border-collapse: collapse;
-	display: table;
-	margin: 2em 0;
-	width: 100%;
+  border-collapse: collapse;
+  display: table;
+  margin: 2em 0;
+  width: 100%;
 }
 table tr,
 table td {
-	text-align: left;
+  text-align: left;
 }
 table tr {
-	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 table td,
 table th {
-	padding: 10px;
+  padding: 10px;
 }
 
 /* The Grid(s) */
 .flex-grid {
-	display: flex;
-	flex-shrink: 0;
-	justify-content: center;
-	margin: 0 auto;
-	max-width: 1400px;
+  display: flex;
+  flex-shrink: 0;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 1400px;
 }
 .flex-grid--wrap {
-	flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 .flex-grid--sb {
-	justify-content: space-between;
+  justify-content: space-between;
 }
 .flex-grid--col {
-	flex-direction: column;
+  flex-direction: column;
 }
 
 .flex-grid__item {
-	background: white;
-	border-radius: 10px;
-	box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	margin: 20px;
-	padding: 40px;
-	text-decoration: none;
-	transition: 0.3s ease all;
-	width: calc(33% - 40px);
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 20px;
+  padding: 40px;
+  text-decoration: none;
+  transition: 0.3s ease all;
+  width: calc(33% - 40px);
 }
 .flex-grid__item:hover {
-	background: var(--link-color);
-	box-shadow: 0 40px 60px 0 rgba(0, 0, 0, 0.2);
-	transform: scale(1.05);
+  background: var(--link-color);
+  box-shadow: 0 40px 60px 0 rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
 }
 .flex-grid__item:hover h2.home-title,
 .flex-grid__item:hover p.home-summary {
-	color: white;
+  color: white;
 }
 
 .flex-grid__item h2 {
-	margin: 0 0 10px 0;
+  margin: 0 0 10px 0;
 }
 .flex-grid__item p {
-	color: #2d2d2d;
-	margin: 0;
+  color: #2d2d2d;
+  margin: 0;
 }
 
 .flex-grid__item--full-width {
-	max-width: 800px;
-	width: calc(100% - 40px) !important;
+  max-width: 800px;
+  width: calc(100% - 40px) !important;
 }
 
 .flex-grid__item--no-hover:hover {
-	background: white;
-	box-shadow: 0 30px 50px 0 rgba(0, 0, 0, 0.3);
-	transform: none;
+  background: white;
+  box-shadow: 0 30px 50px 0 rgba(0, 0, 0, 0.3);
+  transform: none;
 }
 .flex-grid__item--no-hover p {
-	margin: 0 0 20px 0;
+  margin: 0 0 20px 0;
 }
 
 /* Widths */
 .w-100 {
-	width: 100%;
+  width: 100%;
 }
 
 /* Margins */
 .m-0 {
-	margin: 0 !important;
+  margin: 0 !important;
 }
 .m-40 {
-	margin: 40px auto;
+  margin: 40px auto;
 }
 
 /* Padding */
 .p-60 {
-	padding: 0 60px;
+  padding: 0 60px;
 }
 
 /* Typography */
 .t-center {
-	text-align: center;
+  text-align: center;
 }
 .t-right {
-	text-align: right;
+  text-align: right;
 }
 
 /* Colors */
 .c-dark {
-	color: #2d2d2d;
+  color: #2d2d2d;
 }
 
 /* Navigation */
 nav ul {
-	display: flex;
-	padding: 0;
-	list-style: none;
+  display: flex;
+  padding: 0;
+  list-style: none;
 }
 nav ul :first-child {
-	margin-left: 0;
+  margin-left: 0;
 }
 nav ul :last-child {
-	margin-right: 0;
+  margin-right: 0;
 }
 nav li {
-	display: inline-block;
-	font-size: 24px;
-	margin: 0 0.5em;
+  display: inline-block;
+  font-size: 24px;
+  margin: 0 0.5em;
 }
 nav li a,
 nav li a:visited {
-	opacity: 0.8;
-	text-decoration: none;
-	transition: 0.3s ease all;
+  opacity: 0.8;
+  text-decoration: none;
+  transition: 0.3s ease all;
 }
 nav li a:hover {
-	opacity: 1;
-	text-decoration: underline;
+  opacity: 1;
+  text-decoration: underline;
 }
 nav li a[data-current="current item"] {
-	font-weight: bold;
-	opacity: 1;
-	text-decoration: underline;
+  font-weight: bold;
+  opacity: 1;
+  text-decoration: underline;
 }
 
 /* Tags */
 a[rel="tag"],
 a[rel="tag"]:visited {
-	background: var(--link-color);
-	border-radius: 5px;
-	color: white;
-	padding: 5px 10px;
-	text-decoration: none;
+  background: var(--link-color);
+  border-radius: 5px;
+  color: white;
+  padding: 5px 10px;
+  text-decoration: none;
 }
 
 /* Contact Form */
 form {
-	display: grid;
-	padding: 2em 0;
+  display: grid;
+  padding: 2em 0;
 }
 
 form label {
-	display: none;
+  display: none;
 }
 
 input,
 textarea,
 button {
-	width: 100%;
-	padding: 1em;
-	margin-bottom: 1em;
-	font-size: 1rem;
-	font-family: "Avenir", "Avenir Next", sans-serif;
+  width: 100%;
+  padding: 1em;
+  margin-bottom: 1em;
+  font-size: 1rem;
+  font-family: "Avenir", "Avenir Next", sans-serif;
 }
 
 input,
 textarea {
-	border: 1px solid black;
-	border-radius: 5px;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
 button {
-	border: 1px solid var(--link-color);
-	background-color: var(--link-color);
-	border-radius: 5px;
-	color: white;
-	cursor: pointer;
+  border: 1px solid var(--link-color);
+  background-color: var(--link-color);
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1100px) {
-	.flex-grid__item {
-		width: calc(50% - 40px);
-	}
+  .flex-grid__item {
+    width: calc(50% - 40px);
+  }
 }
 
 @media screen and (max-width: 768px) {
-	body {
-		font-size: 16px;
-	}
+  body {
+    font-size: 16px;
+  }
 
-	.flex-grid__item {
-		margin: 10px;
-		padding: 20px;
-		width: 100% !important;
-	}
+  .flex-grid__item {
+    margin: 10px;
+    padding: 20px;
+    width: 100% !important;
+  }
 
-	.flex-grid__item--full-width {
-		margin: 10px 0;
-	}
+  .flex-grid__item--full-width {
+    margin: 10px 0;
+  }
 
-	h1 {
-		font-size: 30px;
-		margin: 40px 0;
-	}
+  h1 {
+    font-size: 30px;
+    margin: 40px 0;
+  }
 
-	p,
-	ol,
-	ul {
-		line-height: 25px;
-	}
+  p,
+  ol,
+  ul {
+    line-height: 25px;
+  }
 
-	.p-60 {
-		padding: 0 20px;
-	}
+  .p-60 {
+    padding: 0 20px;
+  }
 
-	nav ul li {
-		font-size: 16px;
-	}
+  nav ul li {
+    font-size: 16px;
+  }
 
-	.flex-break {
-		display: block;
-		text-align: center;
-		width: 100%;
-	}
+  .flex-break {
+    display: block;
+    text-align: center;
+    width: 100%;
+  }
 }
 
 /* PrismJS 1.15.0
@@ -332,43 +333,43 @@ https://prismjs.com/download.html#themes=prism-tomorrow&languages=markup+css+cli
 
 code[class*="language-"],
 pre[class*="language-"] {
-	color: #ccc;
-	background: none;
-	font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
-	text-align: left;
-	white-space: pre;
-	word-spacing: normal;
-	word-break: normal;
-	word-wrap: normal;
-	line-height: 1.5;
+  color: #ccc;
+  background: none;
+  font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 1.5;
 
-	-moz-tab-size: 4;
-	-o-tab-size: 4;
-	tab-size: 4;
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
 
-	-webkit-hyphens: none;
-	-moz-hyphens: none;
-	-ms-hyphens: none;
-	hyphens: none;
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
 }
 
 /* Code blocks */
 pre[class*="language-"] {
-	padding: 1em;
-	margin: 0 0 20px;
-	overflow: auto;
+  padding: 1em;
+  margin: 0 0 20px;
+  overflow: auto;
 }
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-	background: #2d2d2d;
+  background: #2d2d2d;
 }
 
 /* Inline code */
 :not(pre) > code[class*="language-"] {
-	padding: 0.1em;
-	border-radius: 0.3em;
-	white-space: normal;
+  padding: 0.1em;
+  border-radius: 0.3em;
+  white-space: normal;
 }
 
 .token.comment,
@@ -376,35 +377,35 @@ pre[class*="language-"] {
 .token.prolog,
 .token.doctype,
 .token.cdata {
-	color: #999;
+  color: #999;
 }
 
 .token.punctuation {
-	color: #ccc;
+  color: #ccc;
 }
 
 .token.tag,
 .token.attr-name,
 .token.namespace,
 .token.deleted {
-	color: #e2777a;
+  color: #e2777a;
 }
 
 .token.function-name {
-	color: #6196cc;
+  color: #6196cc;
 }
 
 .token.boolean,
 .token.number,
 .token.function {
-	color: #f08d49;
+  color: #f08d49;
 }
 
 .token.property,
 .token.class-name,
 .token.constant,
 .token.symbol {
-	color: #f8c555;
+  color: #f8c555;
 }
 
 .token.selector,
@@ -412,7 +413,7 @@ pre[class*="language-"] {
 .token.atrule,
 .token.keyword,
 .token.builtin {
-	color: #cc99cd;
+  color: #cc99cd;
 }
 
 .token.string,
@@ -420,27 +421,35 @@ pre[class*="language-"] {
 .token.attr-value,
 .token.regex,
 .token.variable {
-	color: #7ec699;
+  color: #7ec699;
 }
 
 .token.operator,
 .token.entity,
 .token.url {
-	color: #67cdcc;
+  color: #67cdcc;
 }
 
 .token.important,
 .token.bold {
-	font-weight: bold;
+  font-weight: bold;
 }
 .token.italic {
-	font-style: italic;
+  font-style: italic;
 }
 
 .token.entity {
-	cursor: help;
+  cursor: help;
 }
 
 .token.inserted {
-	color: green;
+  color: green;
+}
+
+/*  custom css */
+
+blockquote h1 {
+  font-size: 30px;
+  text-align: left;
+  margin: 0;
 }
