--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -3,7 +3,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index,follow">
   <title>{{ title }} | {{ metadata.title }}</title>
-  <link rel="icon" href="{{ metadata.siteUrl }}/static/images/favicon.png" type="image/png">
+  <link rel="apple-touch-icon" sizes="76x76" href="{{ metadata.siteUrl }}/static/images/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ metadata.siteUrl }}/static/images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ metadata.siteUrl }}/static/images/favicon/favicon-16x16.png">
+<link rel="manifest" href="{{ metadata.siteUrl }}/static/images/favicon/site.webmanifest">
+<link rel="mask-icon" href="{{ metadata.siteUrl }}/static/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:800" rel="stylesheet">
   {% if description %}
     <meta name="description" content="{{ description | safe }}">
